fix responsive font-size for display on mobile and other devices

--- a/styles.css
+++ b/styles.css
@@ -252,7 +252,6 @@ body {
 .experience-title {
     display: flex;
     justify-content: space-between;
-    padding: 0 5px;
 }
 
 /* Section 4 (Projects) */
@@ -319,17 +318,15 @@ body {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 0;
-        width: 100%;
+        width: 80%;
         max-width: 100%;
-        font-size: 10pt;
+        font-size: 14pt;
         text-align: center;
         color: white;
         font-family: "Roboto";
         font-weight: bold;
         
     }
-
     .navbar-links {
         list-style: none;
         display: flex;
@@ -403,5 +400,41 @@ body {
 @media (min-width: 1000px) and (max-width: 1500px) {
     .scroll-arrow {
         top: 90%;
+    }
+}
+
+@media (max-width: 600px) {
+    .navbar-content {
+        font-size: 10pt;
+    }
+}
+
+@media (max-width: 500px) {
+    .logo {
+        display: none;
+    }
+}
+
+@media (max-width: 430px) {
+    .navbar-content {
+        padding-right: 10%;
+    }
+}
+
+@media (max-width: 380px) {
+    .navbar-content {
+        padding-right: 25%;
+    }
+}
+
+@media (max-width: 340px) {
+    .navbar-content {
+        padding-right: 30%;
+    }
+}
+
+@media (max-width: 320px) {
+    .navbar-content {
+        padding-right: 35%;
     }
 }
